semant/snail-yy.output
Terminals unused in grammar

   ENUM
   MUNE
   ERROR


Grammar

    0 $accept: program $end

    1 program: topics

    2 topics: topic
    3       | topics topic

    4 topic: TOPIC OBJECTID '{' feature_list '}' ';'

    5 feature_list: feature
    6             | feature_list feature

    7 feature: kpt
    8        | proc
    9        | func

   10 kpt: kpt_simple ASSIGN_E string ';'
   11    | kpt_simple ':' '{' attrs '}' ';'

   12 kpt_simple: KPT OBJECTID
   13           | KPT OBJECTID AKA OBJECTID
   14           | KPT OBJECTID EXTERN expr
   15           | KPT OBJECTID AKA OBJECTID EXTERN expr

   16 id_list: %empty
   17        | OBJECTID
   18        | id_list ',' OBJECTID

   19 func: FUNC OBJECTID '(' id_list ')' '{' statements '}'

   20 attrs: attr ';'
   21      | attrs attr ';'

   22 attr: attr_name
   23     | attr_name ASSIGN_E expr
   24     | attr_name ASSIGN_A expr

   25 attr_name: WHAT
   26          | WHEN
   27          | HOW
   28          | WHY
   29          | WHERE
   30          | WHO
   31          | OBJECTID

   32 statements: statement ';'
   33           | statements statement ';'

   34 statement: labeled_stat
   35          | LET id_list IN expr TEL
   36          | CASE attr_name OF case_stats ESAC
   37          | RETURN expr

   38 case_stats: case_stat ';'
   39           | case_stats case_stat ';'

   40 case_stat: navig ':' expr

   41 labeled_stat: navig ASSIGN_E expr
   42             | navig ASSIGN_A expr

   43 expr_list: %empty
   44          | expr
   45          | expr_list ',' expr

   46 expr: const
   47     | block_const
   48     | CONNECT WITH navig ABOUT expr
   49     | CONNECT TO navig ABOUT expr
   50     | CONNECT FROM navig ABOUT expr
   51     | OBJECTID '(' expr_list ')'
   52     | OBJECTID '@' OBJECTID '(' expr_list ')'
   53     | expr '|' expr
   54     | expr '&' expr
   55     | expr '-' expr

   56 block_const: '{' const_list '}'

   57 const_list: const ';'
   58           | const_list const ';'

   59 const: string
   60      | navig

   61 navig: OBJECTID
   62      | OBJECTID '.' attr_name
   63      | OBJECTID '@' OBJECTID
   64      | OBJECTID '@' OBJECTID '.' attr_name

   65 proc: PROC OBJECTID '{' proc_components '}'

   66 proc_components: proc_component ';'
   67                | proc_components proc_component ';'

   68 proc_component: string
   69               | IF proc_component THEN proc_component FI
   70               | IF proc_component THEN proc_component ELSE proc_component FI
   71               | WHILE proc_component THEN proc_component

   72 string: STR_CONST
   73       | string STR_CONST


Terminals, with rules where they appear

$end (0) 0
'&' (38) 54
'(' (40) 19 51 52
')' (41) 19 51 52
',' (44) 18 45
'-' (45) 55
'.' (46) 62 64
':' (58) 11 40
';' (59) 4 10 11 20 21 32 33 38 39 57 58 66 67
'@' (64) 52 63 64
ERROR (100)
'{' (123) 4 11 19 56 65
'|' (124) 53
'}' (125) 4 11 19 56 65
STR_CONST (150) 72 73
OBJECTID (151) 4 12 13 14 15 17 18 19 31 51 52 61 62 63 64 65
ASSIGN_E (152) 10 23 41
ASSIGN_A (153) 24 42
TOPIC (201) 4
KPT (202) 12 13 14 15
AKA (203) 13 15
EXTERN (204) 14 15
FUNC (205) 19
PROC (206) 65
WHAT (251) 25
WHEN (252) 26
HOW (253) 27
WHY (254) 28
WHERE (255) 29
WHO (256) 30
CASE (301) 36
OF (302) 36
ESAC (303) 36
ENUM (304)
MUNE (305)
LET (306) 35
IN (307) 35
TEL (308) 35
RETURN (309) 37
IF (310) 69 70
THEN (311) 69 70 71
ELSE (312) 70
FI (313) 69 70
WHILE (314) 71
CONNECT (351) 48 49 50
WITH (352) 48
TO (353) 49
FROM (354) 50
ABOUT (355) 48 49 50
error (356)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
topics (53)
    on left: 2 3, on right: 1 3
topic (54)
    on left: 4, on right: 2 3
feature_list (55)
    on left: 5 6, on right: 4 6
feature (56)
    on left: 7 8 9, on right: 5 6
kpt (57)
    on left: 10 11, on right: 7
kpt_simple (58)
    on left: 12 13 14 15, on right: 10 11
id_list (59)
    on left: 16 17 18, on right: 18 19 35
func (60)
    on left: 19, on right: 9
attrs (61)
    on left: 20 21, on right: 11 21
attr (62)
    on left: 22 23 24, on right: 20 21
attr_name (63)
    on left: 25 26 27 28 29 30 31, on right: 22 23 24 36 62 64
statements (64)
    on left: 32 33, on right: 19 33
statement (65)
    on left: 34 35 36 37, on right: 32 33
case_stats (66)
    on left: 38 39, on right: 36 39
case_stat (67)
    on left: 40, on right: 38 39
labeled_stat (68)
    on left: 41 42, on right: 34
expr_list (69)
    on left: 43 44 45, on right: 45 51 52
expr (70)
    on left: 46 47 48 49 50 51 52 53 54 55, on right: 14 15 23 24 35
    37 40 41 42 44 45 48 49 50 53 54 55
block_const (71)
    on left: 56, on right: 47
const_list (72)
    on left: 57 58, on right: 56 58
const (73)
    on left: 59 60, on right: 46 57 58
navig (74)
    on left: 61 62 63 64, on right: 40 41 42 48 49 50 60
proc (75)
    on left: 65, on right: 8
proc_components (76)
    on left: 66 67, on right: 65 67
proc_component (77)
    on left: 68 69 70 71, on right: 66 67 69 70 71
string (78)
    on left: 72 73, on right: 10 59 68 73


State 0

    0 $accept: . program $end

    TOPIC  shift, and go to state 1

    program  go to state 2
    topics   go to state 3
    topic    go to state 4


State 1

    4 topic: TOPIC . OBJECTID '{' feature_list '}' ';'

    OBJECTID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: topics .
    3 topics: topics . topic

    TOPIC  shift, and go to state 1

    $default  reduce using rule 1 (program)

    topic  go to state 7


State 4

    2 topics: topic .

    $default  reduce using rule 2 (topics)


State 5

    4 topic: TOPIC OBJECTID . '{' feature_list '}' ';'

    '{'  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 topics: topics topic .

    $default  reduce using rule 3 (topics)


State 8

    4 topic: TOPIC OBJECTID '{' . feature_list '}' ';'

    KPT   shift, and go to state 9
    FUNC  shift, and go to state 10
    PROC  shift, and go to state 11

    feature_list  go to state 12
    feature       go to state 13
    kpt           go to state 14
    kpt_simple    go to state 15
    func          go to state 16
    proc          go to state 17


State 9

   12 kpt_simple: KPT . OBJECTID
   13           | KPT . OBJECTID AKA OBJECTID
   14           | KPT . OBJECTID EXTERN expr
   15           | KPT . OBJECTID AKA OBJECTID EXTERN expr

    OBJECTID  shift, and go to state 18


State 10

   19 func: FUNC . OBJECTID '(' id_list ')' '{' statements '}'

    OBJECTID  shift, and go to state 19


State 11

   65 proc: PROC . OBJECTID '{' proc_components '}'

    OBJECTID  shift, and go to state 20


State 12

    4 topic: TOPIC OBJECTID '{' feature_list . '}' ';'
    6 feature_list: feature_list . feature

    KPT   shift, and go to state 9
    FUNC  shift, and go to state 10
    PROC  shift, and go to state 11
    '}'   shift, and go to state 21

    feature     go to state 22
    kpt         go to state 14
    kpt_simple  go to state 15
    func        go to state 16
    proc        go to state 17


State 13

    5 feature_list: feature .

    $default  reduce using rule 5 (feature_list)


State 14

    7 feature: kpt .

    $default  reduce using rule 7 (feature)


State 15

   10 kpt: kpt_simple . ASSIGN_E string ';'
   11    | kpt_simple . ':' '{' attrs '}' ';'

    ASSIGN_E  shift, and go to state 23
    ':'       shift, and go to state 24


State 16

    9 feature: func .

    $default  reduce using rule 9 (feature)


State 17

    8 feature: proc .

    $default  reduce using rule 8 (feature)


State 18

   12 kpt_simple: KPT OBJECTID .
   13           | KPT OBJECTID . AKA OBJECTID
   14           | KPT OBJECTID . EXTERN expr
   15           | KPT OBJECTID . AKA OBJECTID EXTERN expr

    AKA     shift, and go to state 25
    EXTERN  shift, and go to state 26

    $default  reduce using rule 12 (kpt_simple)


State 19

   19 func: FUNC OBJECTID . '(' id_list ')' '{' statements '}'

    '('  shift, and go to state 27


State 20

   65 proc: PROC OBJECTID . '{' proc_components '}'

    '{'  shift, and go to state 28


State 21

    4 topic: TOPIC OBJECTID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


State 22

    6 feature_list: feature_list feature .

    $default  reduce using rule 6 (feature_list)


State 23

   10 kpt: kpt_simple ASSIGN_E . string ';'

    STR_CONST  shift, and go to state 30

    string  go to state 31


State 24

   11 kpt: kpt_simple ':' . '{' attrs '}' ';'

    '{'  shift, and go to state 32


State 25

   13 kpt_simple: KPT OBJECTID AKA . OBJECTID
   15           | KPT OBJECTID AKA . OBJECTID EXTERN expr

    OBJECTID  shift, and go to state 33


State 26

   14 kpt_simple: KPT OBJECTID EXTERN . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 37
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 27

   19 func: FUNC OBJECTID '(' . id_list ')' '{' statements '}'

    OBJECTID  shift, and go to state 42

    $default  reduce using rule 16 (id_list)

    id_list  go to state 43


State 28

   65 proc: PROC OBJECTID '{' . proc_components '}'

    IF         shift, and go to state 44
    WHILE      shift, and go to state 45
    STR_CONST  shift, and go to state 30

    proc_components  go to state 46
    proc_component   go to state 47
    string           go to state 48


State 29

    4 topic: TOPIC OBJECTID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (topic)


State 30

   72 string: STR_CONST .

    $default  reduce using rule 72 (string)


State 31

   10 kpt: kpt_simple ASSIGN_E string . ';'
   73 string: string . STR_CONST

    STR_CONST  shift, and go to state 49
    ';'        shift, and go to state 50


State 32

   11 kpt: kpt_simple ':' '{' . attrs '}' ';'

    WHAT      shift, and go to state 51
    WHEN      shift, and go to state 52
    HOW       shift, and go to state 53
    WHY       shift, and go to state 54
    WHERE     shift, and go to state 55
    WHO       shift, and go to state 56
    OBJECTID  shift, and go to state 57

    attrs      go to state 58
    attr       go to state 59
    attr_name  go to state 60


State 33

   13 kpt_simple: KPT OBJECTID AKA OBJECTID .
   15           | KPT OBJECTID AKA OBJECTID . EXTERN expr

    EXTERN  shift, and go to state 61

    $default  reduce using rule 13 (kpt_simple)


State 34

   48 expr: CONNECT . WITH navig ABOUT expr
   49     | CONNECT . TO navig ABOUT expr
   50     | CONNECT . FROM navig ABOUT expr

    WITH  shift, and go to state 62
    TO    shift, and go to state 63
    FROM  shift, and go to state 64


State 35

   51 expr: OBJECTID . '(' expr_list ')'
   52     | OBJECTID . '@' OBJECTID '(' expr_list ')'
   61 navig: OBJECTID .
   62      | OBJECTID . '.' attr_name
   63      | OBJECTID . '@' OBJECTID
   64      | OBJECTID . '@' OBJECTID '.' attr_name

    '('  shift, and go to state 65
    '@'  shift, and go to state 66
    '.'  shift, and go to state 67

    $default  reduce using rule 61 (navig)


State 36

   56 block_const: '{' . const_list '}'

    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 68

    const_list  go to state 69
    const       go to state 70
    navig       go to state 40
    string      go to state 41


State 37

   14 kpt_simple: KPT OBJECTID EXTERN expr .
   53 expr: expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr

    '-'  shift, and go to state 71
    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 14 (kpt_simple)


State 38

   47 expr: block_const .

    $default  reduce using rule 47 (expr)


State 39

   46 expr: const .

    $default  reduce using rule 46 (expr)


State 40

   60 const: navig .

    $default  reduce using rule 60 (const)


State 41

   59 const: string .
   73 string: string . STR_CONST

    STR_CONST  shift, and go to state 49

    $default  reduce using rule 59 (const)


State 42

   17 id_list: OBJECTID .

    $default  reduce using rule 17 (id_list)


State 43

   18 id_list: id_list . ',' OBJECTID
   19 func: FUNC OBJECTID '(' id_list . ')' '{' statements '}'

    ','  shift, and go to state 74
    ')'  shift, and go to state 75


State 44

   69 proc_component: IF . proc_component THEN proc_component FI
   70               | IF . proc_component THEN proc_component ELSE proc_component FI

    IF         shift, and go to state 44
    WHILE      shift, and go to state 45
    STR_CONST  shift, and go to state 30

    proc_component  go to state 76
    string          go to state 48


State 45

   71 proc_component: WHILE . proc_component THEN proc_component

    IF         shift, and go to state 44
    WHILE      shift, and go to state 45
    STR_CONST  shift, and go to state 30

    proc_component  go to state 77
    string          go to state 48


State 46

   65 proc: PROC OBJECTID '{' proc_components . '}'
   67 proc_components: proc_components . proc_component ';'

    IF         shift, and go to state 44
    WHILE      shift, and go to state 45
    STR_CONST  shift, and go to state 30
    '}'        shift, and go to state 78

    proc_component  go to state 79
    string          go to state 48


State 47

   66 proc_components: proc_component . ';'

    ';'  shift, and go to state 80


State 48

   68 proc_component: string .
   73 string: string . STR_CONST

    STR_CONST  shift, and go to state 49

    $default  reduce using rule 68 (proc_component)


State 49

   73 string: string STR_CONST .

    $default  reduce using rule 73 (string)


State 50

   10 kpt: kpt_simple ASSIGN_E string ';' .

    $default  reduce using rule 10 (kpt)


State 51

   25 attr_name: WHAT .

    $default  reduce using rule 25 (attr_name)


State 52

   26 attr_name: WHEN .

    $default  reduce using rule 26 (attr_name)


State 53

   27 attr_name: HOW .

    $default  reduce using rule 27 (attr_name)


State 54

   28 attr_name: WHY .

    $default  reduce using rule 28 (attr_name)


State 55

   29 attr_name: WHERE .

    $default  reduce using rule 29 (attr_name)


State 56

   30 attr_name: WHO .

    $default  reduce using rule 30 (attr_name)


State 57

   31 attr_name: OBJECTID .

    $default  reduce using rule 31 (attr_name)


State 58

   11 kpt: kpt_simple ':' '{' attrs . '}' ';'
   21 attrs: attrs . attr ';'

    WHAT      shift, and go to state 51
    WHEN      shift, and go to state 52
    HOW       shift, and go to state 53
    WHY       shift, and go to state 54
    WHERE     shift, and go to state 55
    WHO       shift, and go to state 56
    OBJECTID  shift, and go to state 57
    '}'       shift, and go to state 81

    attr       go to state 82
    attr_name  go to state 60


State 59

   20 attrs: attr . ';'

    ';'  shift, and go to state 83


State 60

   22 attr: attr_name .
   23     | attr_name . ASSIGN_E expr
   24     | attr_name . ASSIGN_A expr

    ASSIGN_E  shift, and go to state 84
    ASSIGN_A  shift, and go to state 85

    $default  reduce using rule 22 (attr)


State 61

   15 kpt_simple: KPT OBJECTID AKA OBJECTID EXTERN . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 86
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 62

   48 expr: CONNECT WITH . navig ABOUT expr

    OBJECTID  shift, and go to state 68

    navig  go to state 87


State 63

   49 expr: CONNECT TO . navig ABOUT expr

    OBJECTID  shift, and go to state 68

    navig  go to state 88


State 64

   50 expr: CONNECT FROM . navig ABOUT expr

    OBJECTID  shift, and go to state 68

    navig  go to state 89


State 65

   51 expr: OBJECTID '(' . expr_list ')'

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    $default  reduce using rule 43 (expr_list)

    expr_list    go to state 90
    expr         go to state 91
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 66

   52 expr: OBJECTID '@' . OBJECTID '(' expr_list ')'
   63 navig: OBJECTID '@' . OBJECTID
   64      | OBJECTID '@' . OBJECTID '.' attr_name

    OBJECTID  shift, and go to state 92


State 67

   62 navig: OBJECTID '.' . attr_name

    WHAT      shift, and go to state 51
    WHEN      shift, and go to state 52
    HOW       shift, and go to state 53
    WHY       shift, and go to state 54
    WHERE     shift, and go to state 55
    WHO       shift, and go to state 56
    OBJECTID  shift, and go to state 57

    attr_name  go to state 93


State 68

   61 navig: OBJECTID .
   62      | OBJECTID . '.' attr_name
   63      | OBJECTID . '@' OBJECTID
   64      | OBJECTID . '@' OBJECTID '.' attr_name

    '@'  shift, and go to state 94
    '.'  shift, and go to state 67

    $default  reduce using rule 61 (navig)


State 69

   56 block_const: '{' const_list . '}'
   58 const_list: const_list . const ';'

    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 68
    '}'        shift, and go to state 95

    const   go to state 96
    navig   go to state 40
    string  go to state 41


State 70

   57 const_list: const . ';'

    ';'  shift, and go to state 97


State 71

   55 expr: expr '-' . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 98
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 72

   53 expr: expr '|' . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 99
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 73

   54 expr: expr '&' . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 100
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 74

   18 id_list: id_list ',' . OBJECTID

    OBJECTID  shift, and go to state 101


State 75

   19 func: FUNC OBJECTID '(' id_list ')' . '{' statements '}'

    '{'  shift, and go to state 102


State 76

   69 proc_component: IF proc_component . THEN proc_component FI
   70               | IF proc_component . THEN proc_component ELSE proc_component FI

    THEN  shift, and go to state 103


State 77

   71 proc_component: WHILE proc_component . THEN proc_component

    THEN  shift, and go to state 104


State 78

   65 proc: PROC OBJECTID '{' proc_components '}' .

    $default  reduce using rule 65 (proc)


State 79

   67 proc_components: proc_components proc_component . ';'

    ';'  shift, and go to state 105


State 80

   66 proc_components: proc_component ';' .

    $default  reduce using rule 66 (proc_components)


State 81

   11 kpt: kpt_simple ':' '{' attrs '}' . ';'

    ';'  shift, and go to state 106


State 82

   21 attrs: attrs attr . ';'

    ';'  shift, and go to state 107


State 83

   20 attrs: attr ';' .

    $default  reduce using rule 20 (attrs)


State 84

   23 attr: attr_name ASSIGN_E . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 108
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 85

   24 attr: attr_name ASSIGN_A . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 109
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 86

   15 kpt_simple: KPT OBJECTID AKA OBJECTID EXTERN expr .
   53 expr: expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr

    '-'  shift, and go to state 71
    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 15 (kpt_simple)


State 87

   48 expr: CONNECT WITH navig . ABOUT expr

    ABOUT  shift, and go to state 110


State 88

   49 expr: CONNECT TO navig . ABOUT expr

    ABOUT  shift, and go to state 111


State 89

   50 expr: CONNECT FROM navig . ABOUT expr

    ABOUT  shift, and go to state 112


State 90

   45 expr_list: expr_list . ',' expr
   51 expr: OBJECTID '(' expr_list . ')'

    ','  shift, and go to state 113
    ')'  shift, and go to state 114


State 91

   44 expr_list: expr .
   53 expr: expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr

    '-'  shift, and go to state 71
    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 44 (expr_list)


State 92

   52 expr: OBJECTID '@' OBJECTID . '(' expr_list ')'
   63 navig: OBJECTID '@' OBJECTID .
   64      | OBJECTID '@' OBJECTID . '.' attr_name

    '('  shift, and go to state 115
    '.'  shift, and go to state 116

    $default  reduce using rule 63 (navig)


State 93

   62 navig: OBJECTID '.' attr_name .

    $default  reduce using rule 62 (navig)


State 94

   63 navig: OBJECTID '@' . OBJECTID
   64      | OBJECTID '@' . OBJECTID '.' attr_name

    OBJECTID  shift, and go to state 117


State 95

   56 block_const: '{' const_list '}' .

    $default  reduce using rule 56 (block_const)


State 96

   58 const_list: const_list const . ';'

    ';'  shift, and go to state 118


State 97

   57 const_list: const ';' .

    $default  reduce using rule 57 (const_list)


State 98

   53 expr: expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr
   55     | expr '-' expr .

    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 55 (expr)


State 99

   53 expr: expr . '|' expr
   53     | expr '|' expr .
   54     | expr . '&' expr
   55     | expr . '-' expr

    $default  reduce using rule 53 (expr)


State 100

   53 expr: expr . '|' expr
   54     | expr . '&' expr
   54     | expr '&' expr .
   55     | expr . '-' expr

    $default  reduce using rule 54 (expr)


State 101

   18 id_list: id_list ',' OBJECTID .

    $default  reduce using rule 18 (id_list)


State 102

   19 func: FUNC OBJECTID '(' id_list ')' '{' . statements '}'

    CASE      shift, and go to state 119
    LET       shift, and go to state 120
    RETURN    shift, and go to state 121
    OBJECTID  shift, and go to state 68

    statements    go to state 122
    statement     go to state 123
    labeled_stat  go to state 124
    navig         go to state 125


State 103

   69 proc_component: IF proc_component THEN . proc_component FI
   70               | IF proc_component THEN . proc_component ELSE proc_component FI

    IF         shift, and go to state 44
    WHILE      shift, and go to state 45
    STR_CONST  shift, and go to state 30

    proc_component  go to state 126
    string          go to state 48


State 104

   71 proc_component: WHILE proc_component THEN . proc_component

    IF         shift, and go to state 44
    WHILE      shift, and go to state 45
    STR_CONST  shift, and go to state 30

    proc_component  go to state 127
    string          go to state 48


State 105

   67 proc_components: proc_components proc_component ';' .

    $default  reduce using rule 67 (proc_components)


State 106

   11 kpt: kpt_simple ':' '{' attrs '}' ';' .

    $default  reduce using rule 11 (kpt)


State 107

   21 attrs: attrs attr ';' .

    $default  reduce using rule 21 (attrs)


State 108

   23 attr: attr_name ASSIGN_E expr .
   53 expr: expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr

    '-'  shift, and go to state 71
    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 23 (attr)


State 109

   24 attr: attr_name ASSIGN_A expr .
   53 expr: expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr

    '-'  shift, and go to state 71
    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 24 (attr)


State 110

   48 expr: CONNECT WITH navig ABOUT . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 128
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 111

   49 expr: CONNECT TO navig ABOUT . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 129
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 112

   50 expr: CONNECT FROM navig ABOUT . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 130
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 113

   45 expr_list: expr_list ',' . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 131
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 114

   51 expr: OBJECTID '(' expr_list ')' .

    $default  reduce using rule 51 (expr)


State 115

   52 expr: OBJECTID '@' OBJECTID '(' . expr_list ')'

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    $default  reduce using rule 43 (expr_list)

    expr_list    go to state 132
    expr         go to state 91
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 116

   64 navig: OBJECTID '@' OBJECTID '.' . attr_name

    WHAT      shift, and go to state 51
    WHEN      shift, and go to state 52
    HOW       shift, and go to state 53
    WHY       shift, and go to state 54
    WHERE     shift, and go to state 55
    WHO       shift, and go to state 56
    OBJECTID  shift, and go to state 57

    attr_name  go to state 133


State 117

   63 navig: OBJECTID '@' OBJECTID .
   64      | OBJECTID '@' OBJECTID . '.' attr_name

    '.'  shift, and go to state 116

    $default  reduce using rule 63 (navig)


State 118

   58 const_list: const_list const ';' .

    $default  reduce using rule 58 (const_list)


State 119

   36 statement: CASE . attr_name OF case_stats ESAC

    WHAT      shift, and go to state 51
    WHEN      shift, and go to state 52
    HOW       shift, and go to state 53
    WHY       shift, and go to state 54
    WHERE     shift, and go to state 55
    WHO       shift, and go to state 56
    OBJECTID  shift, and go to state 57

    attr_name  go to state 134


State 120

   35 statement: LET . id_list IN expr TEL

    OBJECTID  shift, and go to state 42

    $default  reduce using rule 16 (id_list)

    id_list  go to state 135


State 121

   37 statement: RETURN . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 136
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 122

   19 func: FUNC OBJECTID '(' id_list ')' '{' statements . '}'
   33 statements: statements . statement ';'

    CASE      shift, and go to state 119
    LET       shift, and go to state 120
    RETURN    shift, and go to state 121
    OBJECTID  shift, and go to state 68
    '}'       shift, and go to state 137

    statement     go to state 138
    labeled_stat  go to state 124
    navig         go to state 125


State 123

   32 statements: statement . ';'

    ';'  shift, and go to state 139


State 124

   34 statement: labeled_stat .

    $default  reduce using rule 34 (statement)


State 125

   41 labeled_stat: navig . ASSIGN_E expr
   42             | navig . ASSIGN_A expr

    ASSIGN_E  shift, and go to state 140
    ASSIGN_A  shift, and go to state 141


State 126

   69 proc_component: IF proc_component THEN proc_component . FI
   70               | IF proc_component THEN proc_component . ELSE proc_component FI

    ELSE  shift, and go to state 142
    FI    shift, and go to state 143


State 127

   71 proc_component: WHILE proc_component THEN proc_component .

    $default  reduce using rule 71 (proc_component)


State 128

   48 expr: CONNECT WITH navig ABOUT expr .
   53     | expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr

    '-'  shift, and go to state 71
    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 48 (expr)


State 129

   49 expr: CONNECT TO navig ABOUT expr .
   53     | expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr

    '-'  shift, and go to state 71
    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 49 (expr)


State 130

   50 expr: CONNECT FROM navig ABOUT expr .
   53     | expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr

    '-'  shift, and go to state 71
    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 50 (expr)


State 131

   45 expr_list: expr_list ',' expr .
   53 expr: expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr

    '-'  shift, and go to state 71
    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 45 (expr_list)


State 132

   45 expr_list: expr_list . ',' expr
   52 expr: OBJECTID '@' OBJECTID '(' expr_list . ')'

    ','  shift, and go to state 113
    ')'  shift, and go to state 144


State 133

   64 navig: OBJECTID '@' OBJECTID '.' attr_name .

    $default  reduce using rule 64 (navig)


State 134

   36 statement: CASE attr_name . OF case_stats ESAC

    OF  shift, and go to state 145


State 135

   18 id_list: id_list . ',' OBJECTID
   35 statement: LET id_list . IN expr TEL

    IN   shift, and go to state 146
    ','  shift, and go to state 74


State 136

   37 statement: RETURN expr .
   53 expr: expr . '|' expr
   54     | expr . '&' expr
   55     | expr . '-' expr

    '-'  shift, and go to state 71
    '|'  shift, and go to state 72
    '&'  shift, and go to state 73

    $default  reduce using rule 37 (statement)


State 137

   19 func: FUNC OBJECTID '(' id_list ')' '{' statements '}' .

    $default  reduce using rule 19 (func)


State 138

   33 statements: statements statement . ';'

    ';'  shift, and go to state 147


State 139

   32 statements: statement ';' .

    $default  reduce using rule 32 (statements)


State 140

   41 labeled_stat: navig ASSIGN_E . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 148
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 141

   42 labeled_stat: navig ASSIGN_A . expr

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36

    expr         go to state 149
    block_const  go to state 38
    const        go to state 39
    navig        go to state 40
    string       go to state 41


State 142

   70 proc_component: IF proc_component THEN proc_component ELSE . proc_component FI

    IF         shift, and go to state 44
    WHILE      shift, and go to state 45
    STR_CONST  shift, and go to state 30

    proc_component  go to state 150
    string          go to state 48


State 143

   69 proc_component: IF proc_component THEN proc_component FI .

    $default  reduce using rule 69 (proc_component)


State 144

   52 expr: OBJECTID '@' OBJECTID '(' expr_list ')' .

    $default  reduce using rule 52 (expr)


State 145

   36 statement: CASE attr_name OF . case_stats ESAC

    OBJECTID  shift, and go to state 68

    case_stats  go to state 151
    case_stat   go to state 152
    navig       go to state 153


State 146

   35 statement: LET id_list IN . expr TEL

    CONNECT    shift, and go to state 34
    STR_CONST  shift, and go to state 30
    OBJECTID   shift, and go to state 35
    '{'        shift, and go to state 36
